<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fastddsspy_docs</name>
  <version>1.2.0</version>
  <description>
     *eprosima Fast DDS Spy* Documentation built with sphinx and deployed in ReadTheDocs.
  </description>
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="javierparis@eprosima.com">Javier París</maintainer>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <maintainer email="irenebandera@eprosima.com">Irene Bandera</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/Fast-DDS-Spy/issues</url>
  <url type="repository">https://github.com/eProsima/Fast-DDS-Spy</url>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>cmake_utils</depend>
  <depend>Sphinx</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
